added rent control referenda results

--- a/index.html
+++ b/index.html
@@ -181,6 +181,7 @@ var elections = [
   "2015 Municipal Runoffs",
   "2016 Primary - DEM",
   "2018 Primary - DEM",
+  "2018 General Election",
   "2019 Municipal General",
   "2019 Municipal Runoffs"
 ];
@@ -289,6 +290,11 @@ pres_primary_races = [
 
 mid_primary_races = [
   {district: "city-cook", race: "U.S. Representative, 7th District"},
+  {district: "var", race: "Rent Control"},
+]
+
+mid_gen_races = [
+  {district: "var", race: "Rent Control"},
 ]
 
 var races = {
@@ -296,6 +302,7 @@ var races = {
   "2015 Municipal Runoffs": municipal_runoff15_races,
   "2016 Primary - DEM": pres_primary_races,
   "2018 Primary - DEM": mid_primary_races,
+  "2018 General Election": mid_gen_races,
   "2019 Municipal General": municipal_races,
   "2019 Municipal Runoffs":municipal_runoff19_races,
 }
