--- a/index.html
+++ b/index.html
@@ -176,147 +176,82 @@ var turnout,
     results;
 
 // define dropdown lists and their options
-var elections = [
-  "2015 Municipal General",
-  "2015 Municipal Runoffs",
-  "2016 Primary - DEM",
-  "2018 Primary - DEM",
-  "2018 General Election",
-  "2019 Municipal General",
-  "2019 Municipal Runoffs"
-];
+// define dropdown lists and their options
+const elections = {
+  "2015 Municipal General": "mg15",
+  "2015 Municipal Runoffs": "mr15",
+  "2016 Primary - DEM": "pp16",
+  "2018 Primary - DEM": "midp18",
+  "2018 General Election": "midg18",
+  "2019 Municipal General": "mg19",
+  "2019 Municipal Runoffs": "mr19",
+};
 
-municipal_races = [
-  {district: "city", race: "Mayor"},
-  {district: "city", race: "City Clerk"},
-  {district: "city", race: "City Treasurer"},
-  {district: 1, race: "Alderman 1st Ward"},
-  {district: 2, race: "Alderman 2nd Ward"},
-  {district: 3, race: "Alderman 3rd Ward"},
-  {district: 4, race: "Alderman 4th Ward"},
-  {district: 5, race: "Alderman 5th Ward"},
-  {district: 6, race: "Alderman 6th Ward"},
-  {district: 7, race: "Alderman 7th Ward"},
-  {district: 8, race: "Alderman 8th Ward"},
-  {district: 9, race: "Alderman 9th Ward"},
-  {district: 10, race: "Alderman 10th Ward"},
-  {district: 11, race: "Alderman 11th Ward"},
-  {district: 12, race: "Alderman 12th Ward"},
-  {district: 13, race: "Alderman 13th Ward"},
-  {district: 14, race: "Alderman 14th Ward"},
-  {district: 15, race: "Alderman 15th Ward"},
-  {district: 16, race: "Alderman 16th Ward"},
-  {district: 17, race: "Alderman 17th Ward"},
-  {district: 18, race: "Alderman 18th Ward"},
-  {district: 19, race: "Alderman 19th Ward"},
-  {district: 20, race: "Alderman 20th Ward"},
-  {district: 21, race: "Alderman 21st Ward"},
-  {district: 22, race: "Alderman 22nd Ward"},
-  {district: 23, race: "Alderman 23rd Ward"},
-  {district: 24, race: "Alderman 24th Ward"},
-  {district: 25, race: "Alderman 25th Ward"},
-  {district: 26, race: "Alderman 26th Ward"},
-  {district: 27, race: "Alderman 27th Ward"},
-  {district: 28, race: "Alderman 28th Ward"},
-  {district: 29, race: "Alderman 29th Ward"},
-  {district: 30, race: "Alderman 30th Ward"},
-  {district: 31, race: "Alderman 31st Ward"},
-  {district: 32, race: "Alderman 32nd Ward"},
-  {district: 33, race: "Alderman 33rd Ward"},
-  {district: 34, race: "Alderman 34th Ward"},
-  {district: 35, race: "Alderman 35th Ward"},
-  {district: 36, race: "Alderman 36th Ward"},
-  {district: 37, race: "Alderman 37th Ward"},
-  {district: 38, race: "Alderman 38th Ward"},
-  {district: 39, race: "Alderman 39th Ward"},
-  {district: 40, race: "Alderman 40th Ward"},
-  {district: 41, race: "Alderman 41st Ward"},
-  {district: 42, race: "Alderman 42nd Ward"},
-  {district: 43, race: "Alderman 43rd Ward"},
-  {district: 44, race: "Alderman 44th Ward"},
-  {district: 45, race: "Alderman 45th Ward"},
-  {district: 46, race: "Alderman 46th Ward"},
-  {district: 47, race: "Alderman 47th Ward"},
-  {district: 48, race: "Alderman 48th Ward"},
-  {district: 49, race: "Alderman 49th Ward"},
-  {district: 50, race: "Alderman 50th Ward"}
+const races = [
+  {district: "city", race: "Mayor", elections: ["mg15", "mr15", "mg19", "mr19",]},
+  {district: "city", race: "City Clerk", elections: ["mg15", "mg19",]},
+  {district: "city", race: "City Treasurer", elections: ["mg15", "mg19", "mr19",]},
+  {district: 1, race: "Alderman 1st Ward", elections: ["mg15", "mg19",]},
+  {district: 2, race: "Alderman 2nd Ward", elections: ["mg15", "mr15", "mg19",]},
+  {district: 3, race: "Alderman 3rd Ward", elections: ["mg15", "mg19",]},
+  {district: 4, race: "Alderman 4th Ward", elections: ["mg15", "mg19",]},
+  {district: 5, race: "Alderman 5th Ward", elections: ["mg15", "mg19", "mr19",]},
+  {district: 6, race: "Alderman 6th Ward", elections: ["mg15", "mg19", "mr19",]},
+  {district: 7, race: "Alderman 7th Ward", elections: ["mg15", "mr15", "mg19",]},
+  {district: 8, race: "Alderman 8th Ward", elections: ["mg15", "mg19",]},
+  {district: 9, race: "Alderman 9th Ward", elections: ["mg15", "mg19",]},
+  {district: 10, race: "Alderman 10th Ward", elections: ["mg15", "mr15", "mg19",]},
+  {district: 11, race: "Alderman 11th Ward", elections: ["mg15", "mr15", "mg19",]},
+  {district: 12, race: "Alderman 12th Ward", elections: ["mg15", "mg19",]},
+  {district: 13, race: "Alderman 13th Ward", elections: ["mg15", "mg19",]},
+  {district: 14, race: "Alderman 14th Ward", elections: ["mg15", "mg19",]},
+  {district: 15, race: "Alderman 15th Ward", elections: ["mg15", "mr15", "mg19", "mr19",]},
+  {district: 16, race: "Alderman 16th Ward", elections: ["mg15", "mr15", "mg19", "mr19",]},
+  {district: 17, race: "Alderman 17th Ward", elections: ["mg15", "mg19",]},
+  {district: 18, race: "Alderman 18th Ward", elections: ["mg15", "mr15", "mg19",]},
+  {district: 19, race: "Alderman 19th Ward", elections: ["mg15", "mg19",]},
+  {district: 20, race: "Alderman 20th Ward", elections: ["mg15", "mr15", "mg19", "mr19",]},
+  {district: 21, race: "Alderman 21st Ward", elections: ["mg15", "mr15", "mg19", "mr19",]},
+  {district: 22, race: "Alderman 22nd Ward", elections: ["mg15", "mg19",]},
+  {district: 23, race: "Alderman 23rd Ward", elections: ["mg15", "mg19",]},
+  {district: 24, race: "Alderman 24th Ward", elections: ["mg15", "mr15", "mg19",]},
+  {district: 25, race: "Alderman 25th Ward", elections: ["mg15", "mg19", "mr19",]},
+  {district: 26, race: "Alderman 26th Ward", elections: ["mg15", "mg19",]},
+  {district: 27, race: "Alderman 27th Ward", elections: ["mg15", "mg19",]},
+  {district: 28, race: "Alderman 28th Ward", elections: ["mg15", "mg19",]},
+  {district: 29, race: "Alderman 29th Ward", elections: ["mg15", "mr15", "mg19",]},
+  {district: 30, race: "Alderman 30th Ward", elections: ["mg15", "mg19", "mr19",]},
+  {district: 31, race: "Alderman 31st Ward", elections: ["mg15", "mr15", "mg19", "mr19",]},
+  {district: 32, race: "Alderman 32nd Ward", elections: ["mg15", "mg19",]},
+  {district: 33, race: "Alderman 33rd Ward", elections: ["mg15", "mg19", "mr19",]},
+  {district: 34, race: "Alderman 34th Ward", elections: ["mg15", "mg19",]},
+  {district: 35, race: "Alderman 35th Ward", elections: ["mg15", "mg19",]},
+  {district: 36, race: "Alderman 36th Ward", elections: ["mg15", "mr15", "mg19",]},
+  {district: 37, race: "Alderman 37th Ward", elections: ["mg15", "mr15", "mg19",]},
+  {district: 38, race: "Alderman 38th Ward", elections: ["mg15", "mg19",]},
+  {district: 39, race: "Alderman 39th Ward", elections: ["mg15", "mg19", "mr19",]},
+  {district: 40, race: "Alderman 40th Ward", elections: ["mg15", "mg19", "mr19",]},
+  {district: 41, race: "Alderman 41st Ward", elections: ["mg15", "mr15", "mg19",]},
+  {district: 42, race: "Alderman 42nd Ward", elections: ["mg15", "mg19",]},
+  {district: 43, race: "Alderman 43rd Ward", elections: ["mg15", "mr15", "mg19", "mr19",]},
+  {district: 44, race: "Alderman 44th Ward", elections: ["mg15", "mg19",]},
+  {district: 45, race: "Alderman 45th Ward", elections: ["mg15", "mr15", "mg19",]},
+  {district: 46, race: "Alderman 46th Ward", elections: ["mg15", "mr15", "mg19", "mr19",]},
+  {district: 47, race: "Alderman 47th Ward", elections: ["mg15", "mg19", "mr19",]},
+  {district: 48, race: "Alderman 48th Ward", elections: ["mg15", "mg19",]},
+  {district: 49, race: "Alderman 49th Ward", elections: ["mg15", "mg19",]},
+  {district: 50, race: "Alderman 50th Ward", elections: ["mg15", "mg19",]},
+  {district: "var", race: "Rent Control", elections: ["midp18", "midg18", "mg19",]},
+  {district: "city", race: "President, U.S.", elections: ["pp16"]},
+  {district: "city-cook", race: "U.S. Representative, 7th District", elections: ["midp18"]},
 ]
-
-var municipal_runoff15_races = [
-  {district: "city", race: "Mayor"},
-  {district: 2, race: "Alderman 2nd Ward"},
-  {district: 7, race: "Alderman 7th Ward"},
-  {district: 10, race: "Alderman 10th Ward"},
-  {district: 11, race: "Alderman 11th Ward"},
-  {district: 15, race: "Alderman 15th Ward"},
-  {district: 16, race: "Alderman 16th Ward"},
-  {district: 18, race: "Alderman 18th Ward"},
-  {district: 20, race: "Alderman 20th Ward"},
-  {district: 21, race: "Alderman 21st Ward"},
-  {district: 24, race: "Alderman 24th Ward"},
-  {district: 29, race: "Alderman 29th Ward"},
-  {district: 31, race: "Alderman 31st Ward"},
-  {district: 36, race: "Alderman 36th Ward"},
-  {district: 37, race: "Alderman 37th Ward"},
-  {district: 41, race: "Alderman 41st Ward"},
-  {district: 43, race: "Alderman 43rd Ward"},
-  {district: 45, race: "Alderman 45th Ward"},
-  {district: 46, race: "Alderman 46th Ward"}
-]
-
-var municipal_referenda19 = [
-  {district: "var", race: "Rent Control"},
-]
-
-var municipal_runoff19_races = [
-  {district: "city", race: "Mayor"},
-  {district: "city", race: "City Treasurer"},
-  {district: 5, race: "Alderman 5th Ward"},
-  {district: 6, race: "Alderman 6th Ward"},
-  {district: 15, race: "Alderman 15th Ward"},
-  {district: 16, race: "Alderman 16th Ward"},
-  {district: 20, race: "Alderman 20th Ward"},
-  {district: 21, race: "Alderman 21st Ward"},
-  {district: 25, race: "Alderman 25th Ward"},
-  {district: 30, race: "Alderman 30th Ward"},
-  {district: 31, race: "Alderman 31st Ward"},
-  {district: 33, race: "Alderman 33rd Ward"},
-  {district: 39, race: "Alderman 39th Ward"},
-  {district: 40, race: "Alderman 40th Ward"},
-  {district: 43, race: "Alderman 43rd Ward"},
-  {district: 46, race: "Alderman 46th Ward"},
-  {district: 47, race: "Alderman 47th Ward"}
-]
-
-pres_primary_races = [
-  {district: "city", race: "President, U.S."},
-]
-
-mid_primary_races = [
-  {district: "city-cook", race: "U.S. Representative, 7th District"},
-  {district: "var", race: "Rent Control"},
-]
-
-mid_gen_races = [
-  {district: "var", race: "Rent Control"},
-]
-
-var races = {
-  "2015 Municipal General": municipal_races,
-  "2015 Municipal Runoffs": municipal_runoff15_races,
-  "2016 Primary - DEM": pres_primary_races,
-  "2018 Primary - DEM": mid_primary_races,
-  "2018 General Election": mid_gen_races,
-  "2019 Municipal General": municipal_races.concat(municipal_referenda19),
-  "2019 Municipal Runoffs":municipal_runoff19_races,
-}
 
 var electionSelect = d3.select("#election-select"),
     raceSelect = d3.select("#race-select"),
     candidateSelect = d3.select("#candidate-select"); // populated after election chosen
 
 electionSelect.selectAll("option.election-option")
-    .data(elections)
+    .data(Object.keys(elections))
   .enter().append("option")
     .attr("class", "election-option")
     .attr("year", d => d.split(" ")[0])
@@ -401,7 +336,6 @@ var pctColor = d3.scaleQuantile()
 loadTurnoutData();
 Promise.all([
   d3.json("data/geospatial/allprecincts.topojson"),
-  //d3.json("data/geospatial/wards.topojson")
 ])
 .then(([precincts]) => {
   raceSelect.on("change", () => {
@@ -618,10 +552,10 @@ function updateLegend(candidate) {
 function updateRaceSelect() {
   raceSelect.selectAll("option.race-option").remove();
 
-  var election = electionSelect.node().value;
+  var election = elections[electionSelect.node().value];
 
   raceSelect.selectAll("option.race-option")
-    .data(races[election])
+    .data(races.filter(d => d.elections.includes(election)))
     //.data((election == "2015 Municipal Runoffs" || election == "2019 Municipal Runoffs") ? races.filter(d => d[election]) : races)
   .enter().append("option")
     .attr("class", "race-option")
