--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <script src="https://d3js.org/d3.v5.min.js"></script>
 <script src="https://d3js.org/topojson.v1.min.js"></script>
 <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
+<script src="https://unpkg.com/jsts/dist/jsts.min.js"></script>
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css"
    integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
    crossorigin=""/>
@@ -175,6 +176,17 @@ var turnout,
     candidates,
     results;
 
+// topology variables
+var baseLayer,
+    dist1,
+    dist2;
+
+// JSTS variables
+var rTree,
+    rTree2,
+    reader = new jsts.io.GeoJSONReader(),
+    writer = new jsts.io.GeoJSONWriter();
+
 // define dropdown lists and their options
 // define dropdown lists and their options
 const elections = {
@@ -338,6 +350,8 @@ Promise.all([
   d3.json("data/geospatial/allprecincts.topojson"),
 ])
 .then(([precincts]) => {
+  precincts = topojson.feature(precincts, precincts.objects.precincts).features;
+
   raceSelect.on("change", () => {
     draw(precincts);
   });
@@ -379,18 +393,32 @@ function draw(precincts) {
   if (raceDistrict == "city-cook") {
     suburbanFilePath = "data/election_results/" + electionYear + "/Cook - " + election + " " + raceDD.options[raceDD.selectedIndex].getAttribute("file");
     files.push(suburbanFilePath);
+    promises.push(d3.json("data/geospatial/ushouse.topojson"));
   }
 
   files.forEach(f => promises.push(d3.tsv(f, parseResults)));
 
-  Promise.all(promises).then(() => {
+  Promise.all(promises).then((intersect) => {
     var transform = d3.geoTransform({point: projectPoint}),
         path = d3.geoPath().projection(transform);
 
     // filter only precincts relevant to election
     var usePrecincts = results.keys();
-    var precinctFeatures = topojson.feature(precincts, precincts.objects.precincts),
-        filteredPrecincts = precinctFeatures.features.filter(d => usePrecincts.includes(d.properties.full_text));
+    //var precinctFeatures = topojson.feature(precincts, precincts.objects.precincts),
+        filteredPrecincts = precincts.filter(d => usePrecincts.includes(d.properties.full_text));
+
+    if (raceDistrict == "city-cook") {
+      var cd = topojson.feature(intersect[0], intersect[0].objects.districts).features.filter(d => d.properties.CD115FP == "7")[0]
+
+      rTree = new jsts.index.strtree.STRtree()
+      filteredPrecincts.map(d => {
+        d.polygon = reader.read(d.geometry)
+        rTree.insert(d.polygon.getEnvelopeInternal(), d)
+      });
+
+      var filteredPrecincts = findIntersection(cd, rTree);
+      console.log(filteredPrecincts);
+    }
 
     // calculate overall results for chosen election
     var flat = [].concat.apply([], results.values());
@@ -593,6 +621,18 @@ function parseResults(d, i) {
 
 function parsePrecinct(p) {
   return isNaN(p) ? p : "Ward " + +p.slice(0,2) + " Precinct " + +p.slice(2);
+}
+
+function findIntersection(topo, rt) {
+  var searchPolygon = reader.read(topo.geometry)
+  var intersections = [];
+  rt.query(searchPolygon.getEnvelopeInternal()).array.forEach(function(d) {
+    var intersection = d.polygon.intersection(searchPolygon);
+    intersections.push({"type": "Feature", "geometry": intersection, "properties": d.properties})
+  })
+
+  intersectionsGeoJSON = intersections.map(d => ({"type": "Feature", "geometry": writer.write(d.geometry), "properties": d.properties}));
+  return intersectionsGeoJSON
 }
 </script>
 <footer>
